<?xml version="1.0"?>
<package>
  <name>qwt_dependency</name>
  <version>1.1.2</version>
  <description>This encapsulates the Qwt dependency for a specific ROS distribution and its Qt version</description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <license>BSD</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python3-qwt</run_depend>
</package>
